ac_scaffold --> Ladder fixed
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2898 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_scaffold.cfg
+++ b/ac/packages/maps/ac_scaffold.cfg
@@ -104,16 +104,17 @@ mapmodel 0 0 0 0 "toca/signs/confined"
 mapmodel 0 0 0 0 "toca/signs/explosives"	
 mapmodel 4 1 0 0 "toca/platformmet"		
 mapmodel 4 1 7 0 "toca/stairs1"			
-mapmodel 4 1 7 0 "toca/stairs2"			
-mapmodel 2 1 0 0 "nothing"			
-mapmodel 1 1 0 0 "toca/cinderblock"		
-mapmodel 1 8 0 0 "toca/corrugated/fence1"	
-mapmodel 1 8 0 0 "toca/corrugated/fence2"	
-mapmodel 1 8 0 0 "toca/corrugated/beam"		
-mapmodel 2 6 0 0 "toca/rack"			
-mapmodel 2 2 0 0 "toca/airconditioner"		
-mapmodel 2 2 0 0 "toca/airconditioner/interior"	
-mapmodel 1 1 0 0 "toca/ceillingfan"		
+mapmodel 4 1 7 0 "toca/stairs2"
+mapmodel 2 1 0 0 "nothing"
+mapmodel 1 1 0 0 "toca/cinderblock"
+mapmodel 1 8 0 0 "toca/corrugated/fence1"
+mapmodel 1 8 0 0 "toca/corrugated/fence2"
+mapmodel 1 8 0 0 "toca/corrugated/beam"
+mapmodel 2 6 0 0 "toca/rack"
+mapmodel 2 2 0 0 "toca/airconditioner"
+mapmodel 2 2 0 0 "toca/airconditioner/interior"
+mapmodel 1 1 0 0 "toca/ceillingfan"
+mapmodel 0 1 0 0 "ladder_rung"
 loadsky "textures/skymaps/socksky/nightball"
 texturereset
 texture 0 "./kurt/klite1.jpg"
