fixed quit menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2907 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -150,8 +150,8 @@ menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for te
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
 
 newmenu quit
-menuitem "Yes, quit AssaultCube now.." "quit"
-menuitem "No! I must keep playing.." "quit"
+menuitem "Yes, quit now" "quit"
+menuitem "No" "quit"
 
 
 
