--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -550,3 +550,41 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 // texture 0 "./wotwot/urban/electric1.jpg"
 // texture 0 "./wotwot/urban/electric1_bla.jpg"
 // texture 0 "./openfootage/stonewall_4.jpg"
+
+
+// Ambient Sounds
+
+mapsound "./ambience/cavedrip.ogg" 170 -1 	// 0
+mapsound "./ambience/distant_cars.ogg" 170 -1	// 1
+mapsound "./ambience/hum01.ogg" 170 -1 		// 2
+mapsound "./ambience/hum02.ogg" 170 -1 		// 3
+mapsound "./ambience/night_crickets.ogg" 170 -1	// 4
+mapsound "./ambience/water.ogg" 170 -1 		// 5
+mapsound "./ambience/wind.ogg" 170 -1 		// 6
+
+mapsound "./ambience/t_aircond.ogg" 170 -1	// 7
+mapsound "./ambience/t_compressor.ogg" 170 -1	// 8
+mapsound "./ambience/t_crow.ogg" 170 -1 	// 9
+mapsound "./ambience/t_dogs01.ogg" 170 -1 	//10
+mapsound "./ambience/t_helicopter.ogg" 170 -1	//11
+mapsound "./ambience/t_hum01.ogg" 170 -1 	//12
+mapsound "./ambience/t_hum02.ogg" 170 -1 	//13
+mapsound "./ambience/t_hum03.ogg" 170 -1 	//14
+mapsound "./ambience/t_hum04.ogg" 170 -1 	//15
+mapsound "./ambience/t_night_dog.ogg" 170 -1	//16
+mapsound "./ambience/t_night01.ogg" 170 -1	//17
+mapsound "./ambience/t_night02.ogg" 170 -1	//18
+mapsound "./ambience/t_radio_comms.ogg" 170 -1	//19
+mapsound "./ambience/t_radio_static.ogg" 170 -1	//20
+mapsound "./ambience/t_satcoms.ogg" 170 -1	//21
+mapsound "./ambience/t_sludge.ogg" 170 -1 	//22
+mapsound "./ambience/t_static01.ogg" 170 -1	//23
+mapsound "./ambience/t_static02.ogg" 170 -1	//24
+mapsound "./ambience/t_vent01.ogg" 170 -1 	//25
+mapsound "./ambience/t_vent02.ogg" 170 -1 	//26
+mapsound "./ambience/t_water_owl.ogg" 170 -1	//27
+mapsound "./ambience/t_water01.ogg" 170 -1	//28
+mapsound "./ambience/t_waterdrip.ogg" 170 -1	//29
+mapsound "./ambience/t_wind.ogg" 170 -1 	//30
+mapsound "./ambience/warningalarm01.ogg" 170 -1	//31
+
