--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -553,6 +553,7 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 
 
 // Ambient Sounds
+mapsoundreset
 
 mapsound "./ambience/cavedrip.ogg" 170 -1 	// 0
 mapsound "./ambience/distant_cars.ogg" 170 -1	// 1
