--- a/ac/packages/maps/soundtest.cfg
+++ b/ac/packages/maps/soundtest.cfg
@@ -80,7 +80,9 @@ mapmodel 0 0 0 0 "wires/4x8a"      //59
 mapmodel 0 0 0 0 "wires/4x8"       //60
 mapmodel 0 0 0 0 "drainpipe"       //61
 
-mapsound "ambience/hum01.wav" 100 -1      //0
+mapsoundreset
+
+mapsound "ambience/hum01.ogg" 100 -1      //0
 
 // skybox for this map - check /packages/skymaps/
 
