--- a/ac/packages/maps/ac_arctic.cfg
+++ b/ac/packages/maps/ac_arctic.cfg
@@ -359,6 +359,8 @@ texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"
 
+mapsoundreset
+
 mapsound "./ambience/cavedrip.ogg" 170 -1	// 0
 mapsound "./ambience/distant_cars.ogg" 170 -1
 mapsound "./ambience/hum01.ogg" 170 -1
