--- a/ac/packages/maps/st.cfg
+++ b/ac/packages/maps/st.cfg
@@ -1,5 +1,7 @@
 //mapsound name vol maxonce
 
+mapsoundreset
+
 mapsound "./ambience/t_crow.ogg" 250 5
 mapsound "./ambience/t_night01.ogg" 250 5
 mapsound "./ambience/t_wind.ogg" 250 5
