fixed quit menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2927 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -151,7 +151,7 @@ menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Releas
 
 newmenu quit
 menuitem "Yes, quit now" "quit"
-menuitem "No" "quit"
+menuitem "No" " "
 
 
 
