added: ambient sounds
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2930 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_arctic.cfg
+++ b/ac/packages/maps/ac_arctic.cfg
@@ -360,7 +360,6 @@ texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"
 
 mapsoundreset
-
 mapsound "./ambience/cavedrip.ogg" 170 -1	// 0
 mapsound "./ambience/distant_cars.ogg" 170 -1
 mapsound "./ambience/hum01.ogg" 170 -1
@@ -368,7 +367,6 @@ mapsound "./ambience/hum02.ogg" 170 -1
 mapsound "./ambience/night_crickets.ogg" 170 -1
 mapsound "./ambience/water.ogg" 170 -1 		// 5
 mapsound "./ambience/wind.ogg" 170 -1
-
 mapsound "./ambience/t_aircond.ogg" 170 -1
 mapsound "./ambience/t_compressor.ogg" 170 -1
 mapsound "./ambience/t_crow.ogg" 170 -1
@@ -393,4 +391,6 @@ mapsound "./ambience/t_water_owl.ogg" 170 -1
 mapsound "./ambience/t_water01.ogg" 170 -1
 mapsound "./ambience/t_waterdrip.ogg" 170 -1
 mapsound "./ambience/t_wind.ogg" 170 -1 	//30
-mapsound "./ambience/warningalarm01.ogg" 170 -1	//31
+mapsound "./ambience/t_waterpipe01.ogg" 170 -1
+mapsound "./ambience/t_waterpipe02.ogg" 170 -1
+mapsound "./ambience/warningalarm01.ogg" 170 -1	//33
