--- a/ac/packages/maps/ac_keller.cfg
+++ b/ac/packages/maps/ac_keller.cfg
@@ -320,3 +320,39 @@ texture 0 "./wotwot/urban/electric1.jpg"
 texture 0 "./wotwot/urban/electric1_plain.jpg"
 texture 0 "./wotwot/urban/cableshelf1_s_hor.jpg"
 texture 0 "./wotwot/urban/cableshelf1_s_ver.jpg"
+
+mapsoundreset
+mapsound "./ambience/cavedrip.ogg" 170 -1	// 0
+mapsound "./ambience/distant_cars.ogg" 170 -1
+mapsound "./ambience/hum01.ogg" 170 -1
+mapsound "./ambience/hum02.ogg" 170 -1
+mapsound "./ambience/night_crickets.ogg" 170 -1
+mapsound "./ambience/water.ogg" 170 -1 		// 5
+mapsound "./ambience/wind.ogg" 170 -1
+mapsound "./ambience/t_aircond.ogg" 170 -1
+mapsound "./ambience/t_compressor.ogg" 170 -1
+mapsound "./ambience/t_crow.ogg" 170 -1
+mapsound "./ambience/t_dogs01.ogg" 170 -1 	//10
+mapsound "./ambience/t_helicopter.ogg" 170 -1
+mapsound "./ambience/t_hum01.ogg" 170 -1
+mapsound "./ambience/t_hum02.ogg" 170 -1
+mapsound "./ambience/t_hum03.ogg" 170 -1
+mapsound "./ambience/t_hum04.ogg" 170 -1 	//15
+mapsound "./ambience/t_night_dog.ogg" 170 -1
+mapsound "./ambience/t_night01.ogg" 170 -1
+mapsound "./ambience/t_night02.ogg" 170 -1
+mapsound "./ambience/t_radio_comms.ogg" 170 -1
+mapsound "./ambience/t_radio_static.ogg" 170 -1	//20
+mapsound "./ambience/t_satcoms.ogg" 170 -1
+mapsound "./ambience/t_sludge.ogg" 170 -1
+mapsound "./ambience/t_static01.ogg" 170 -1
+mapsound "./ambience/t_static02.ogg" 170 -1
+mapsound "./ambience/t_vent01.ogg" 170 -1 	//25
+mapsound "./ambience/t_vent02.ogg" 170 -1
+mapsound "./ambience/t_water_owl.ogg" 170 -1
+mapsound "./ambience/t_water01.ogg" 170 -1
+mapsound "./ambience/t_waterdrip.ogg" 210 -1
+mapsound "./ambience/t_wind.ogg" 170 -1 	//30
+mapsound "./ambience/t_waterpipe01.ogg" 170 -1
+mapsound "./ambience/t_waterpipe02.ogg" 170 -1
+mapsound "./ambience/warningalarm01.ogg" 170 -1	//33
