added: ambient sounds
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2931 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -587,5 +587,6 @@ mapsound "./ambience/t_water_owl.ogg" 170 -1	//27
 mapsound "./ambience/t_water01.ogg" 170 -1	//28
 mapsound "./ambience/t_waterdrip.ogg" 170 -1	//29
 mapsound "./ambience/t_wind.ogg" 170 -1 	//30
-mapsound "./ambience/warningalarm01.ogg" 170 -1	//31
-
+mapsound "./ambience/t_waterpipe01.ogg" 170 -1	//31
+mapsound "./ambience/t_waterpipe02.ogg" 170 -1	//32
+mapsound "./ambience/warningalarm01.ogg" 170 -1	//33
