option to enable/disable quit dialog
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2932 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -114,3 +114,5 @@ alias delta_spect_0 [ followplayer $arg1 ]
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
 alias mapstartonce [ ]
+
+alias askquit 1
