--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -323,6 +323,7 @@ newmenu game
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Show modes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
+menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 menuitemcheckbox "OMG!Ponies! mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
 
