--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -9,7 +9,7 @@ menuitem "Demo"				"showmenu demo"
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
 menuitem "About"			"showmenu about"
-menuitem "Quit"				"showmenu quit"
+menuitem "Quit"				"savequit"
 
 
 // Start maps.
@@ -149,10 +149,16 @@ menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
 
+
+// show quit dialog if enabled
+
 newmenu quit
 menuitem "Yes, quit now" "quit"
 menuitem "No" " "
 
+alias savequit [
+    if (= $askquit 1) [ showmenu quit ] [ quit ]
+]
 
 
 // create additional menus
