put checkbox into quit dialog
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2933 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -155,6 +155,8 @@ menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Releas
 newmenu quit
 menuitem "Yes, quit now" "quit"
 menuitem "No" " "
+menuitem "" ""
+menuitemcheckbox "Don`t ask next time: " "(= $askquit 0)" "askquit = (= $arg1 0)"
 
 alias savequit [
     if (= $askquit 1) [ showmenu quit ] [ quit ]
