removed BOM from cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2953 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -1,4 +1,4 @@
-﻿// auto generated script to make the doc reference readable for Cube games, see the 'docs/cuberef.txt'
+// auto generated script to make the doc reference readable for Cube games, see the 'docs/cuberef.txt'
 
 docsection [CubeScript]
 
