updated cfg to reflect change in mapsound cmd interface
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2958 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/soundtest.cfg
+++ b/ac/packages/maps/soundtest.cfg
@@ -82,7 +82,7 @@ mapmodel 0 0 0 0 "drainpipe"       //61
 
 mapsoundreset
 
-mapsound "ambience/hum01.ogg" 100 -1      //0
+mapsound "ambience/hum01.ogg" -1      //0
 
 // skybox for this map - check /packages/skymaps/
 
