--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -37,15 +37,14 @@ menuinit [alias newteam (curteam)]
 menuitemtextinput "Nickname:" "result $curname" "name $arg1"
 menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
 menuitem "" ""
-menuitem "Select player skin.."          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Select weapon.."        "showmenu weapons"
+menuitem "Change player skin.."          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Change weapon.."        "showmenu weapons"
 menuitem "" ""
-menuitem "QUICK setup.."                                            [ showmenu "QUICK setup" ]
-menuitem "Keyboard/mouse controls.."                                "showmenu controls"
-menuitem "Video settings.."                                         "showmenu video"
-menuitem "Sound settings.."                                         "showmenu sound"
-menuitem "Game settings.."                                          "showmenu game"
-menuitem "Head-Up display settings.."                               "showmenu HUD"
+menuitem "Video settings..."                                         "showmenu video"
+menuitem "Head-Up display settings..."                               "showmenu HUD"
+menuitem "Input controls..."                     	           "showmenu controls"
+menuitem "Sound settings..."                                         "showmenu sound"
+menuitem "Misc settings..."                                 "showmenu Misc"
 menuitem "" ""
 menuitem "Reset all settings..."                          [ showmenu "Reset ALL settings?" ]
 menuitem ""
@@ -56,7 +55,7 @@ newmenu "QUICK setup"
 menuitemtextinput "Nickname:" 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):  " "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height): " "$scr_h" "scr_h $arg1"
-menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
 menuitem "" ""
@@ -178,12 +177,12 @@ alias new_sound_quality [
 
 newmenu "Reset ALL settings?"
 
-menuitem "  Reset ALL settings and restart AC..." "resetcfg 1; quit"
-menuitem "		Go back!		" "showmenu settings"
+menuitem "  Yes, reset all settings and restart" "resetcfg 1; quit"
+menuitem "		No, go back!		" "showmenu settings"
 
 newmenu controls
 
-menuitem "Select an action and press ENTER to set a new key-binding"
+menuitem "Select an action below and press ENTER to change to a new key"
 menuitem ""
 menuitemkeyinput "Forwards: "        forward
 menuitemkeyinput "Left: "           left
@@ -207,7 +206,7 @@ menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem ""
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
+menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitem ""
 menuitem "		   [ Reset binds to defaults ]  		" [ showmenu "Are you sure you want to reset binds?" ]
 
@@ -223,16 +222,26 @@ newmenu video
 menuitemtextinput "Screen width: " "$scr_w" "scr_w $arg1"
 menuitemtextinput "Screen height: " "$scr_h" "scr_h $arg1"
 
+menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
+menuitem "" ""
+
 menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
 menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
-alias fsaa_valuemap "-1 2 4 8 16"
-menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
-menuitemcheckbox "Vsync: " "$vsync" "vsync $arg1"
-menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
 
+
+menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
+menuitemcheckbox "Vsync: " "$vsync" "vsync $arg1"
+menuitem "" ""
+menuitem "Advanced video settings..."	[ showmenu "Advanced video settings" ]
 
 menuitem "" ""
+menuitem "		[ Apply now! ]			" resetgl
+
+newmenu "Advanced video settings"
+
+alias fsaa_valuemap "-1 2 4 8 16"
+menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
 alias minlod_valuemap "25 60 100 250"
 menuitemslider "Minimal level of detail: " 0 3 "(findlist $minlod_valuemap $minlod)" 1 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
@@ -240,6 +249,7 @@ menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 
 alias watersubdiv_valuemap "16 8 4 2 1"
 menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
+menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
 menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 getshadowq = [
@@ -267,14 +277,13 @@ setshadowq = [
 ]
 
 menuitemcheckbox "Dynamic lights: " "$dynlight" [dynlight $arg1]
-menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
 
-menuitem "FPS range.." "showmenu fpsrange"
 
-menuitem "" ""
 menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
 menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
 menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
+menuitem "" ""
+menuitem "FPS range..." "showmenu fpsrange"
 
 
 menuitem "" ""
@@ -292,6 +301,12 @@ newmenu sound
 
 menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
+menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitem ""
+menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
+
+
+newmenu "Advanced settings"
 menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
 menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
 menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
@@ -303,13 +318,13 @@ alias new_poniesmode [
         blood 0
         gibnum 0
         loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // mute pain sounds
-        echo OMG!Ponies! mode enabled, we try to hide violent content now..    
+        echo OMG!Ponies! mode enabled - Violent game content has now been reduced.
 
     ] [ // violent
         blood 1
         gibnum 6
         unmuteallsounds
-        echo OMG!Ponies! mode disabled..
+        echo OMG!Ponies! mode disabled...
     ]
 ]
 
@@ -318,31 +333,33 @@ alias getponiesmode [
 ]
 
 
-newmenu game
+newmenu Misc
 
-menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
-menuitemcheckbox "Show modes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
+menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
-menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
+menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "OMG!Ponies! mode: " "(getponiesmode)" "new_poniesmode $arg1"
-menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
+menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
+menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 
 
 newmenu HUD
 
-menuitemcheckbox "Show stats: " "(= $hidestats 0)" "hidestats (= $arg1 0)"
-menuitemcheckbox "Show gun: " "$hudgun" "hudgun $arg1"
-menuitemcheckbox "Show radar: " "(= $hideradar 0)" "hideradar (= $arg1 0)"
-menuitemcheckbox "Show team icon: " "(= $hideteam 0)" "hideteam (= $arg1 0)"
-menuitemcheckbox "Show votes: " "(= $hidevote 0)" "hidevote (= $arg1 0)"
-menuitemcheckbox "Show icons: " "(= $hidehudequipment 0)" "hidehudequipment (= $arg1 0)"
-menuitemcheckbox "Show console: " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
-menuitemcheckbox "Show spectate info: " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
-menuitemcheckbox "Show quick messages: " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1 0)"
-menuitemcheckbox "Show damage indicator: " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
-menuitemcheckbox "Show crosshair team-sign: " "$crosshairteamsign" "crosshairteamsign $arg1"
+menuitem "Show:" ""
+menuitemcheckbox "   Stats " "(= $hidestats 0)" "hidestats (= $arg1 0)"
+menuitemcheckbox "   Gun " "$hudgun" "hudgun $arg1"
+menuitemcheckbox "   Radar " "(= $hideradar 0)" "hideradar (= $arg1 0)"
+menuitemcheckbox "   Team icon " "(= $hideteam 0)" "hideteam (= $arg1 0)"
+menuitemcheckbox "   Votes " "(= $hidevote 0)" "hidevote (= $arg1 0)"
+menuitemcheckbox "   Icons " "(= $hidehudequipment 0)" "hidehudequipment (= $arg1 0)"
+menuitemcheckbox "   Console " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
+menuitemcheckbox "   Spectator info " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
+menuitemcheckbox "   Quick messages " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1 0)"
+menuitemcheckbox "   Damage indicator " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
+menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsign $arg1"
+menuitem "" ""
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
-menuitem "Select crosshair..				"	  "showmenu Crosshairs"
+menuitem "Change crosshair...				"	  "showmenu Crosshairs"
 
 
 
