--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -156,7 +156,7 @@ newmenu quit
 menuitem "Yes, quit now" "quit"
 menuitem "No" " "
 menuitem "" ""
-menuitemcheckbox "Don`t ask next time: " "(= $askquit 0)" "askquit = (= $arg1 0)"
+menuitemcheckbox "Don't ask next time: " "(= $askquit 0)" "askquit = (= $arg1 0)"
 
 alias savequit [
     if (= $askquit 1) [ showmenu quit ] [ quit ]
