New in-game menus
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3030 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,23 +1,48 @@
+//Menu that is shown when escape is pressed connected in-game.
+newmenu "In-game"
+
+menuitem "Change mode/map"		"showmenu Gamemode"
+menuitem "Kick/ban player"		"showmenu kick/ban"
+menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
+menuitem "Change mastermode" 		"showmenu Mastermode"
+menuitem "Disconnect"			"disconnect"
+menuitem "Change settings"		"showmenu settings"
+menuitem "Demos"			"showmenu demo"
+menuitem "Chat"				"saycommand"
+menuitem "Team Chat"			"saycommand %"
+menuitem "Voice Coms"			"showmenu voicecom"
+menuitem ""
+menuitem "Go to the main menu"		"showmenu main"
+
+
+// Multiplayer menu only used when disconnected.
 newmenu multiplayer
 
 menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
-menuitem "Join a LAN server"	"searchlan 2; showallservers 0; showmenu server"
-menuitem "Disconnect"			"disconnect"
-menuitem "Server voting..."		[ showmenu "Server voting" ]
-menuitem "Chat"				"saycommand"
-menuitem "Team Chat"			"saycommand %"
-menuitem "VoiceCom"			"showmenu voicecom"
+menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
+menuitem "Custom connect"		[ showmenu "Custom connect" ]
+menuitem "Force servers to update"	"updatefrommaster"
 
-newmenu "Server voting"
+newmenu "Custom connect"
 
-menuitem "Vote to change mode/map" 		"showmenu Gamemode"
-menuitem "Vote to change mastermode" 		"showmenu Mastermode"
-menuitem "Vote to force a team change" 		[ showmenu "force team" ]
-menuitem "Vote to kick a player"		[showmenu "kick player"]
-menuitem "Vote to ban a player" 		[showmenu "ban player"]
-menuitem "Vote to remove bans"			"removebans"
-menuitem "Vote for autoteam"			[ showmenu "Auto Adjust Teams" ]
-menuitem "Vote to shuffle teams"		"shuffleteams"
+// menuitemtextinput "Server IP/DNS		"	"" "alias cc1" 
+// menuitemtextinput "Server port (optional)	"	"" "alias cc2"
+// menuitemtextinput "Server password (optional)	"	"" "alias cc3"
+menuitem "This menu is still being worked upon"
+// menuitem "		[ OK ]			" "connect $cc1 $cc2 $cc3"
+
+
+newmenu kick/ban
+
+menuitem "Kick a player"	[ showmenu "kick player" ]
+menuitem "Ban a player"		[ showmenu "ban player" ]
+menuitem "Remove all bans"	"removebans"
+
+newmenu "Team adjustment"
+
+menuitem "Force a team change"		[ showmenu "force team" ]
+menuitem "Initiate autoteam"		[ showmenu "Auto-adjust teams" ]
+menuitem "Initiate shuffleteams"	"shuffleteams"
 
 newmenu Gamemode
 
@@ -40,7 +65,7 @@ newmenu Mastermode
 menuitem "Unlock the server (open)"		"mastermode 0"
 menuitem "Lock the server (private)"		"mastermode 1"
 
-newmenu "Auto Adjust Teams"
+newmenu "Auto-adjust teams"
 
 menuitem "Turn auto-team on"	"autoteam 1"
 menuitem "Turn auto-team off"	"autoteam 0"
