--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -13,7 +13,7 @@ bind TAB "showscores"
 bind CLEAR ""
 bind RETURN ""
 bind PAUSE ""
-bind ESCAPE "showmenu main"
+bind ESCAPE [ if $connected [ showmenu "In-game" ] [ showmenu main ] ]
 bind SPACE "jump"
 bind EXCLAIM ""
 bind QUOTEDBL ""
