custom connect menu... still buggy.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3031 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -21,15 +21,15 @@ newmenu multiplayer
 menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
 menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
 menuitem "Custom connect"		[ showmenu "Custom connect" ]
-menuitem "Force servers to update"	"updatefrommaster"
+menuitem "Force servers to update"	"updatefrommaster 1"
 
 newmenu "Custom connect"
 
-// menuitemtextinput "Server IP/DNS		"	"" "alias cc1" 
-// menuitemtextinput "Server port (optional)	"	"" "alias cc2"
-// menuitemtextinput "Server password (optional)	"	"" "alias cc3"
-menuitem "This menu is still being worked upon"
-// menuitem "		[ OK ]			" "connect $cc1 $cc2 $cc3"
+menuitemtextinput "Server IP/DNS"			"" "alias cc1 $arg1" 
+menuitemtextinput "Server port (optional)"		"" "alias cc2 $arg1"
+menuitemtextinput "Server password (optional)"		"" "alias cc3 $arg1"
+menuitem ""
+menuitem "			[ OK ]				" "connect $cc1 $cc2 $cc3"
 
 
 newmenu kick/ban
