menuinit for customconnect menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3032 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -25,6 +25,7 @@ menuitem "Force servers to update"	"updatefrommaster 1"
 
 newmenu "Custom connect"
 
+menuinit [ alias cc1 ""; alias cc2 ""; alias cc3 "" ]	// Resets the aliases
 menuitemtextinput "Server IP/DNS"			"" "alias cc1 $arg1" 
 menuitemtextinput "Server port (optional)"		"" "alias cc2 $arg1"
 menuitemtextinput "Server password (optional)"		"" "alias cc3 $arg1"
