--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,16 +1,17 @@
 //Menu that is shown when escape is pressed connected in-game.
 newmenu "In-game"
 
+
 menuitem "Change mode/map"		"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
-menuitem "Disconnect"			"disconnect"
 menuitem "Change settings"		"showmenu settings"
 menuitem "Demos"			"showmenu demo"
 menuitem "Chat"				"saycommand"
 menuitem "Team Chat"			"saycommand %"
 menuitem "Voice Coms"			"showmenu voicecom"
+menuitem "Disconnect"			"disconnect"
 menuitem ""
 menuitem "Go to the main menu"		"showmenu main"
 
@@ -26,9 +27,9 @@ menuitem "Force servers to update"	"updatefrommaster 1"
 newmenu "Custom connect"
 
 menuinit [ alias cc1 ""; alias cc2 ""; alias cc3 "" ]	// Resets the aliases
-menuitemtextinput "Server IP/DNS"			"" "alias cc1 $arg1" 
-menuitemtextinput "Server port (optional)"		"" "alias cc2 $arg1"
-menuitemtextinput "Server password (optional)"		"" "alias cc3 $arg1"
+menuitemtextinput "Server IP/DNS: "			"" "alias cc1 $arg1" 
+menuitemtextinput "Server port (optional): "		"" "alias cc2 $arg1"
+menuitemtextinput "Server password (optional): "	"" "alias cc3 $arg1"
 menuitem ""
 menuitem "			[ OK ]				" "connect $cc1 $cc2 $cc3"
 
