--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -9,7 +9,7 @@ menuitem "Demo"				"showmenu demo"
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
 menuitem "About"			"showmenu about"
-menuitem "Quit"				"savequit"
+menuitem "2Quit"				"savequit"
 
 
 // Start maps.
@@ -69,7 +69,7 @@ menuitem "by 'Rabid Viper Productions'" "showmenu credits"
 menuitem "http://assault.cubers.net" "echo sorry no built-in web browser yet :)"
 menuitem "a cube mod/tc based on the" ""
 menuitem ""
-menuitem "Cube game/engine" ""
+menuitem "Cube Engine" ""
 menuitem "by Wouter 'Aardappel' van Oortmerssen" ""
 menuitem "and others" ""
 menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)"
