--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -24,7 +24,7 @@ newmenu "White light"
 menuitemslider "Light radius: " 1 32 " " 1 "" "alias wlight $arg1"
 menuitemslider "Brightness: " 1 255 " " 5 "" "alias wlight1 $arg1"
 menuitem ""
-menuitem "		[ OK ]		" "newent light $wlight $wlight1"
+menuitem "2		[ OK ]		" "newent light $wlight $wlight1"
 
 
 newmenu "Coloured light"
@@ -35,7 +35,7 @@ menuitemslider "Red light: " 1 255 " " 5 "" "alias clight1 $arg1"
 menuitemslider "Green light: " 1 255 " " 5 "" "alias clight2 $arg1"
 menuitemslider "Blue light: " 1 255 " " 5 "" "alias clight3 $arg1"
 menuitem ""
-menuitem "		[ OK ]		" "newent light $clight $clight1 $clight2 $clight3"
+menuitem "2		[ OK ]		" "newent light $clight $clight1 $clight2 $clight3"
 
 //Entities menu
 newmenu Entities
