--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,28 +1,30 @@
-//Menu that is shown when escape is pressed connected in-game.
+// Menu that is shown when escape is pressed connected in-game
+
 newmenu "In-game"
 
-
-menuitem "Change mode/map"		"showmenu Gamemode"
+menuitem "Change name"        "showmenu Name"
+menuitem "Change team"        "showmenu Team"
+menuitem "Change weapon"        "showmenu Weapons"
+menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "" ""
+menuitem "Set mode/map"		"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
-menuitem "Change settings"		"showmenu settings"
 menuitem "Demos"			"showmenu demo"
-menuitem "Chat"				"saycommand"
-menuitem "Team Chat"			"saycommand %"
-menuitem "Voice Coms"			"showmenu voicecom"
-menuitem "Disconnect"			"disconnect"
 menuitem ""
-menuitem "Go to the main menu"		"showmenu main"
+menuitem "Disconnect"			"disconnect"
+menuitem "2Go back to Main Menu"		"showmenu main"
 
 
-// Multiplayer menu only used when disconnected.
+// Multiplayer menu only used when disconnected
+
 newmenu multiplayer
 
 menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
 menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
 menuitem "Custom connect"		[ showmenu "Custom connect" ]
-menuitem "Force servers to update"	"updatefrommaster 1"
+menuitem "Force serverlist update"	"updatefrommaster 1"
 
 newmenu "Custom connect"
 
@@ -31,7 +33,7 @@ menuitemtextinput "Server IP/DNS: "			"" "alias cc1 $arg1"
 menuitemtextinput "Server port (optional): "		"" "alias cc2 $arg1"
 menuitemtextinput "Server password (optional): "	"" "alias cc3 $arg1"
 menuitem ""
-menuitem "			[ OK ]				" "connect $cc1 $cc2 $cc3"
+menuitem "2			[ Connect ]				" "connect $cc1 $cc2 $cc3"
 
 
 newmenu kick/ban
