--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,8 +1,18 @@
 newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
+newmenu Name
 
-newmenu weapons
+menuitemtextinput "Nickname:" "result $curname" "name $arg1"
+
+
+newmenu Team
+
+menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
+menuitem "2		 [ Apply ] 		" [ team (at [CLA RVSF] $newteam) ]
+
+
+newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
 menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
@@ -34,21 +44,13 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 newmenu settings
 
 menuinit [alias newteam (curteam)]
-menuitemtextinput "Nickname:" "result $curname" "name $arg1"
-menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
+menuitem "Video settings"                                         "showmenu video"
+menuitem "Head-Up display settings"                               "showmenu HUD"
+menuitem "Input controls"                     	           "showmenu controls"
+menuitem "Sound settings"                                         "showmenu sound"
+menuitem "Misc settings"                                 "showmenu Misc"
 menuitem "" ""
-menuitem "Change player skin.."          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Change weapon.."        "showmenu weapons"
-menuitem "" ""
-menuitem "Video settings..."                                         "showmenu video"
-menuitem "Head-Up display settings..."                               "showmenu HUD"
-menuitem "Input controls..."                     	           "showmenu controls"
-menuitem "Sound settings..."                                         "showmenu sound"
-menuitem "Misc settings..."                                 "showmenu Misc"
-menuitem "" ""
-menuitem "Reset all settings..."                          [ showmenu "Reset ALL settings?" ]
-menuitem ""
-menuitem "		 [ OK ] 		" [ team (at [CLA RVSF] $newteam) ]
+menuitem "Reset all settings"                          [ showmenu "Reset ALL settings?" ]
 
 newmenu "QUICK setup"
 
@@ -59,7 +61,7 @@ menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $a
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
 menuitem "" ""
-menuitem "			 [ OK ] 			" "resetgl"
+menuitem "2			 [ OK ] 			" "resetgl"
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
@@ -193,7 +195,7 @@ menuitemkeyinput "Special action: " altaction
 menuitemkeyinput "Jump: "           jump
 menuitemkeyinput "Crouch: "         crouch
 menuitemkeyinput "Reload: "         reload
-menuitemkeyinput "Weapon menu: "    "showmenu weapons"
+menuitemkeyinput "Weapon menu: "    "showmenu Weapons"
 menuitemkeyinput "Next weapon: "     "universaldelta  1"
 menuitemkeyinput "Previous weapon: " "universaldelta -1"
 menuitemkeyinput "Show scores: "    showscores
@@ -236,7 +238,7 @@ menuitem "" ""
 menuitem "Advanced video settings..."	[ showmenu "Advanced video settings" ]
 
 menuitem "" ""
-menuitem "		[ Apply now! ]			" resetgl
+menuitem "2		[ Apply now! ]			" resetgl
 
 newmenu "Advanced video settings"
 
@@ -287,7 +289,7 @@ menuitem "FPS range..." "showmenu fpsrange"
 
 
 menuitem "" ""
-menuitem "				[ Apply now! ]				" resetgl
+menuitem "2				[ Apply now! ]				" resetgl
 
 newmenu fpsrange
 
