--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -9,7 +9,7 @@ menuitem "Demo"				"showmenu demo"
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
 menuitem "About"			"showmenu about"
-menuitem "2Quit"				"savequit"
+menuitem "Quit"				"savequit"
 
 
 // Start maps.
