--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,17 +1,6 @@
 newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
-newmenu Name
-
-menuitemtextinput "Nickname:" "result $curname" "name $arg1"
-
-
-newmenu Team
-
-menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
-menuitem "2		 [ Apply ] 		" [ team (at [CLA RVSF] $newteam) ]
-
-
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
@@ -337,12 +326,17 @@ alias getponiesmode [
 
 newmenu Misc
 
+menuitemtextinput "Nickname:" "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "OMG!Ponies! mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
+// menuitem "Change to the enemy team"        [ if $myteam 1 [ team CLA ] [ team RVSF ] ]
+// This commented script is awaiting variables for "team" which meatrome will add tomorrow.
+menuitem "Change weapon"        "showmenu Weapons"
+menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 
 
 newmenu HUD
