--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -2,12 +2,35 @@
 
 newmenu "In-game"
 
-menuitem "Change name"        "showmenu Name"
-menuitem "Change team"        "showmenu Team"
-menuitem "Change weapon"        "showmenu Weapons"
+// menuinit [ if $adminstatus 1 [ showmenu "In-game admin menu" ] [ showmenu In-game ] ]
+// This option is an idea, also awaiting code by meatrome....
+menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
+// menuitem "Change to the enemy team"        [ if $team 1 [ team CLA ] [ team RVSF ] ]
+// This option is awaiting a variable to be coded by meatrome tomorrow... this is probably a better/easier team change menuitem.
+menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "" ""
-menuitem "Set mode/map"		"showmenu Gamemode"
+menuitem "Set mode/map"			"showmenu Gamemode"
+menuitem "Kick/ban player"		"showmenu kick/ban"
+menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
+menuitem "Change mastermode" 		"showmenu Mastermode"
+menuitem "Demos"			"showmenu demo"
+menuitem ""
+menuitem "Disconnect"			"disconnect"
+menuitem "2Go back to Main Menu"		"showmenu main"
+
+
+
+newmenu "In-game admin menu"
+
+// I'll finish this part later...
+menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
+// menuitem "Change to the enemy team"        [ if $team 1 [ team CLA ] [ team RVSF ] ]
+// This option is awaiting a variable to be coded by meatrome tomorrow... this is probably a better/easier team change menuitem.
+menuitem "Change weapon"        	"showmenu Weapons"
+menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "" ""
+menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
@@ -24,16 +47,29 @@ newmenu multiplayer
 menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
 menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
 menuitem "Custom connect"		[ showmenu "Custom connect" ]
-menuitem "Force serverlist update"	"updatefrommaster 1"
+menuitem "Admin connect"		[ showmenu "Admin connect" ]
+menuitem "
+menuitem "Force serverlist update"	"updatefrommaster 1; showmenu server"
+
 
 newmenu "Custom connect"
 
 menuinit [ alias cc1 ""; alias cc2 ""; alias cc3 "" ]	// Resets the aliases
-menuitemtextinput "Server IP/DNS: "			"" "alias cc1 $arg1" 
-menuitemtextinput "Server port (optional): "		"" "alias cc2 $arg1"
-menuitemtextinput "Server password (optional): "	"" "alias cc3 $arg1"
+menuitemtextinput "Server IP/DNS: 		"	"" "alias cc1 $arg1" 
+menuitemtextinput "Server port (optional): 	"	"" "alias cc2 $arg1"
+menuitemtextinput "Server password (optional): 	"	"" "alias cc3 $arg1"
 menuitem ""
-menuitem "2			[ Connect ]				" "connect $cc1 $cc2 $cc3"
+menuitem "2			  [ Connect ]				" "connect $cc1 $cc2 $cc3"
+
+
+newmenu "Admin connect"
+
+menuinit [ alias acc1 ""; alias acc2 ""; alias acc3 ""; echo "3To use this menu to connect as administrator, you will need to know the administrator password for your server." ]	// Resets the aliases
+menuitemtextinput "Server IP/DNS: 		"		"" "alias acc1 $arg1" 
+menuitemtextinput "Server port (optional):	"		"" "alias acc2 $arg1"
+menuitemtextinput "Server admin password: 	"		"" "alias acc3 $arg1"
+menuitem ""
+menuitem "2		  [ Admin connect ]			" "connectadmin $cc1 $cc2 $cc3"
 
 
 newmenu kick/ban
