--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -34,16 +34,16 @@ newmenu settings
 
 menuinit [alias newteam (curteam)]
 menuitem "Video settings"                                         "showmenu video"
-menuitem "Head-Up display settings"                               "showmenu HUD"
+menuitem "Head-Up Display settings"                               "showmenu HUD"
 menuitem "Input controls"                     	           "showmenu controls"
 menuitem "Sound settings"                                         "showmenu sound"
-menuitem "Misc settings"                                 "showmenu Misc"
+menuitem "Gameplay settings"                                 "showmenu gameplay"
 menuitem "" ""
 menuitem "Reset all settings"                          [ showmenu "Reset ALL settings?" ]
 
 newmenu "QUICK setup"
 
-menuitemtextinput "Nickname:" 		"" "name $arg1"
+menuitemtextinput "Nickname: " 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):  " "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height): " "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
@@ -324,9 +324,9 @@ alias getponiesmode [
 ]
 
 
-newmenu Misc
+newmenu gameplay
 
-menuitemtextinput "Nickname:" "result $curname" "name $arg1"
+menuitemtextinput "Nickname: " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
