--- a/ac/packages/models/mapmodels/toca/computer/monkeymou/md3.cfg
+++ b/ac/packages/models/mapmodels/toca/computer/monkeymou/md3.cfg
@@ -1,10 +1,9 @@
 md3load mkm.md3
-md3skin monitor skin.jpg
-md3skin mouse skin.jpg
-md3skin teclado skin.jpg
+md3skin mkm skin.jpg
 md3skin screenA skin2.jpg
 md3skin screenB skin2.jpg
 
-//md3anim mapmodel 1 19 10
+//comment the next line to show the "Blue Screen Of Death"
+md3anim mapmodel 2 10 5
 
 mdlshadowdist 4
