--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -330,7 +330,7 @@ menuitemtextinput "Nickname: " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
-menuitemcheckbox "OMG!Ponies! mode: " "(getponiesmode)" "new_poniesmode $arg1"
+menuitemcheckbox "Non-violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 // menuitem "Change to the enemy team"        [ if $myteam 1 [ team CLA ] [ team RVSF ] ]
