A different menu opens if you're an admin and press ESC in game :D
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3072 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -10,7 +10,7 @@ keymap 9 TAB "showscores"
 keymap 12 CLEAR ""
 keymap 13 RETURN ""
 keymap 19 PAUSE ""
-keymap 27 ESCAPE [ if $connected [ showmenu "In-game" ] [ showmenu main ] ]
+keymap 27 ESCAPE [ if $connected [ ingamemenu ] [ showmenu main ] ]
 keymap 32 SPACE "jump"
 keymap 33 EXCLAIM ""
 keymap 34 QUOTEDBL ""
