--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,12 +1,11 @@
-// Menu that is shown when escape is pressed connected in-game
+// Decides wether to open the admin or normal in-game menu.
+alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-game ] ]
 
+// Normal in-game menu that opens when pressing escape and connected to a game.
 newmenu "In-game"
 
-// menuinit [ if $adminstatus 1 [ showmenu "In-game admin menu" ] [ showmenu In-game ] ]
-// This option is an idea, also awaiting code by meatrome....
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-// menuitem "Change to the enemy team"        [ if $team 1 [ team CLA ] [ team RVSF ] ]
-// This option is awaiting a variable to be coded by meatrome tomorrow... this is probably a better/easier team change menuitem.
+menuitem "Change to the enemy team"        [ if (curteam 1) [ team CLA; echo "You are now on team CLA" ] [ team RVSF; echo "You are now on team RVSF" ] ]
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "" ""
@@ -20,28 +19,26 @@ menuitem "Disconnect"			"disconnect"
 menuitem "2Go back to Main Menu"		"showmenu main"
 
 
+// In-game menu that opens if when you press escape if you're admin state and connected to a game.
+newmenu "In-game admin"
 
-newmenu "In-game admin menu"
-
-// I'll finish this part later...
-menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-// menuitem "Change to the enemy team"        [ if $team 1 [ team CLA ] [ team RVSF ] ]
-// This option is awaiting a variable to be coded by meatrome tomorrow... this is probably a better/easier team change menuitem.
-menuitem "Change weapon"        	"showmenu Weapons"
-menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "" ""
 menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
-menuitem "Demos"			"showmenu demo"
+menuitem "Give admin"			[ showmenu "give admin" ]
 menuitem ""
+menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
+menuitem "Change to the enemy team"        [ if (curteam 1) [ team CLA; echo "You are now on team CLA" ] [ team RVSF; echo "You are now on team RVSF" ] ]
+menuitem "Change weapon"        	"showmenu Weapons"
+menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Demos"			"showmenu demo"
+menuitem "" ""
 menuitem "Disconnect"			"disconnect"
 menuitem "2Go back to Main Menu"		"showmenu main"
 
 
-// Multiplayer menu only used when disconnected
-
+// Multiplayer menu only opens through the main menu (when disconnected).
 newmenu multiplayer
 
 menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
@@ -51,7 +48,7 @@ menuitem "Admin connect"		[ showmenu "Admin connect" ]
 menuitem "
 menuitem "Force serverlist update"	"updatefrommaster 1; showmenu server"
 
-
+// Fancy custom connect menu.
 newmenu "Custom connect"
 
 menuinit [ alias cc1 ""; alias cc2 ""; alias cc3 "" ]	// Resets the aliases
@@ -61,7 +58,7 @@ menuitemtextinput "Server password (optional): 	"	"" "alias cc3 $arg1"
 menuitem ""
 menuitem "2			  [ Connect ]				" "connect $cc1 $cc2 $cc3"
 
-
+// Connect to a menu as admin.
 newmenu "Admin connect"
 
 menuinit [ alias acc1 ""; alias acc2 ""; alias acc3 ""; echo "3To use this menu to connect as administrator, you will need to know the administrator password for your server." ]	// Resets the aliases
