--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -43,9 +43,9 @@ menuitem "Reset all settings"                          [ showmenu "Reset ALL set
 
 newmenu "QUICK setup"
 
-menuitemtextinput "Nickname: " 		"" "name $arg1"
+menuitemtextinput "Nickname:  " 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):  " "$scr_w" "scr_w $arg1"
-menuitemtextinput "Resolution (Height): " "$scr_h" "scr_h $arg1"
+menuitemtextinput "Resolution (Height):  " "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
@@ -333,8 +333,7 @@ menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Non-violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
-// menuitem "Change to the enemy team"        [ if $myteam 1 [ team CLA ] [ team RVSF ] ]
-// This commented script is awaiting variables for "team" which meatrome will add tomorrow.
+menuitem "Change to the enemy team"        [ if (curteam 1) [ team CLA; echo "You are now on team CLA" ] [ team RVSF; echo "You are now on team RVSF" ] ]
 menuitem "Change weapon"        "showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 
