catch SIGSEGV and other signals on Linux to print stacktrace when crashing, don't strip bins on compilation
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3075 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -1,6 +1,6 @@
 CXXOPTFLAGS=-O3 -fomit-frame-pointer
 INCLUDES=-I/usr/X11R6/include -I../enet/include -I../src `sdl-config --cflags`
-CXXFLAGS=$(CXXOPTFLAGS) $(INCLUDES) -fsigned-char -Wall -Wno-deprecated
+CXXFLAGS=$(CXXOPTFLAGS) $(INCLUDES) -fsigned-char -Wall -Wno-deprecated -rdynamic
 
 PLATFORM_PREFIX=native
 CLIENT_LIBS=-L/usr/X11R6/lib -L../enet -lenet `sdl-config --libs` -lSDL_image -lz -lGL -lGLU -lopenal -lvorbisfile
@@ -80,5 +80,5 @@ server: $(SERVER_FILES)
 install: all
 	cp ac_client ../../bin_unix/$(PLATFORM_PREFIX)_client
 	cp ac_server ../../bin_unix/$(PLATFORM_PREFIX)_server
-	strip ../../bin_unix/$(PLATFORM_PREFIX)_client
-	strip ../../bin_unix/$(PLATFORM_PREFIX)_server
+#	strip ../../bin_unix/$(PLATFORM_PREFIX)_client
+#	strip ../../bin_unix/$(PLATFORM_PREFIX)_server
