--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -442,7 +442,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine=""
+				CommandLine="copy /Y $(ProjectDir)\$(OutDir)\*.pdb $(TargetDir)\.. "
 			/>
 		</Configuration>
 		<Configuration
@@ -564,6 +564,10 @@
 			</File>
 			<File
 				RelativePath="..\src\geom.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\hash.h"
 				>
 			</File>
 			<File
