Updated all game mode descriptions. Updated credits. Used text input for docfind.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3085 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -61,9 +61,8 @@ menudirlist "demos/" "dmo" "demo $arg1"
 newmenu about
 
 menuitem "AssaultCube v1.0" ""
-menuitem ""
 menuitem "                     ...Help"		"showmenu help"
-menuitem "                     ...Credits"	"showmenu credits"
+menuitem "                     ...Credits"	"showmenu Credits"
 menuitem ""
 menuitem "by 'Rabid Viper Productions'" "showmenu credits"
 menuitem "http://assault.cubers.net" "echo sorry no built-in web browser yet :)"
@@ -78,14 +77,18 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 newmenu help
 
 menuitem "AssaultCube reference"	"showmenu reference"
-menuitem "Search commands"		"saycommand /docfind "
-menuitem "Default keys"			"showmenu controls"
-menuitem "Map editing help"		[ showmenu "Map editing help" ]
+menuitem "Search the reference"		[ showmenu "Reference search" ]
+menuitem "Keyboard controls"			"showmenu controls"
 menuitem "" ""
 menuitem "...for further information/help see the README" "echo 2The readme can be found in the base AssaultCube directory."
 
+newmenu "Reference search"
+menuinit [ alias docsearchstring "" ]
+menuitemtextinput "Search reference for:  "	"" "alias docsearchstring $arg1"
+menuitem "2		  [ Search ]			" "docfind $docsearchstring"
 
-newmenu credits
+
+newmenu Credits
 
 menuitem "Project Leaders" ""
 menuitem "-----------------" ""
@@ -98,6 +101,8 @@ menuitem "-----------------------------------" ""
 menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." ""
 menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." ""
 menuitem "Flowtron			Universal team member, additional code, admin, community chief." ""
+menuitem "ac_stef				Bug fixes, additional code, server stuff, new modes." ""
+menuitem "Toca				Mapmodels, sounds, textures, other stuff."
 menuitem "" ""
 menuitem "Community Mappers" ""
 menuitem "-----------------------" ""
@@ -126,32 +131,35 @@ menuitem "KanslozeClown			Code contributions and advice." ""
 menuitem "										Scroll the list to see more..." ""
 menuitem "Resources" ""
 menuitem "------------" ""
-menuitem "JCDPC						Laptop mapmodel, textures." ""
-menuitem "DCP						End-of-match music." ""
-menuitem "Toca						Mapmodels." ""
-menuitem "Topher						Some crosshairs." ""
-menuitem "leileilol						Bullethole image." ""
-menuitem "Steini						Skyboxes." ""
-menuitem "wildweasel					Vote sounds." ""
-menuitem "Tremulous team				Gib sound." ""
-menuitem "Lukas Zapletal & Ludek Horacek		Music (Ping pong)." ""
-menuitem "Antiklimax					Sniper scope." ""
-menuitem "SimonOC					Nightball skymap" ""
-menuitem "LadyNightHawk				 	InhCanyons skymap" ""
-menuitem "Sock 						Iceflow skymap" ""
+menuitem "JCDPC				Laptop mapmodel, textures." ""
+menuitem "Topher				Some crosshairs." ""
+menuitem "leileilol				Bullethole image." ""
+menuitem "Steini				Skyboxes." ""
+menuitem "Antiklimax			Sniper scope." ""
+menuitem "SimonOC			Nightball/Graveyard skymap." ""
+menuitem "LadyNightHawk		 	InhCanyons skymap." ""
+menuitem "Sock 				Iceflow skymap." ""
+menuitem "HitmanDaz[MT]		Playermodels"
 menuitem "" ""
 menuitem "Texture sources" ""
 menuitem "------------------""
 menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " ""
 menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," ""
-menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo." ""
+menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo," ""
+menuitem "drunkenM, www.openfootage.com, Kurt." ""
+menuitem ""
+menuitem "Sound sources"
+menuitem "----------------""
+menuitem "DCP, wildweasel (Vote sounds), Tremulous team (Gib sound), mwl500, fonogeno," ""
+menuitem "Lukas Zapletal & Ludek Horacek (Music), livindead, NoiseCollector, droboide," ""
+menuitem "nicStage, acclivity, Syna Max, ermine, ReWired, nofeedbak, vuzz, mich3d," ""
+menuitem "Rhedcerulean, www.soundsnap.com, dommygee, fresco, WIM, ignotus, acclivity, Bahutan"
 menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
 
 
-// show quit dialog if enabled
-
+// Show quit dialog if enabled
 newmenu quit
 menuitem "Yes, quit now" "quit"
 menuitem "No" " "
@@ -162,16 +170,27 @@ alias savequit [
     if (= $askquit 1) [ showmenu quit ] [ quit ]
 ]
 
+// Game mode descriptions...
+gamemodedesc 0 [1Team Deathmatch: Find the enemy team and destroy them!]
+gamemodedesc 1 [1Co-operative edit: Use this mode to edit maps with others online!]
+gamemodedesc 2 [1Deathmatch: Destroy anything that moves! Everyone for themselves!]
+gamemodedesc 3 [1Survivor: Everyone for themselves! Once you die, you must wait for the round to restart.]
+gamemodedesc 4 [1Team Survivor: Find the team, destory them. Once everyone on the enemy team is gone... repeat!]
+gamemodedesc 5 [1Capture the Flag: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
+gamemodedesc 6 [1Pistol Frenzy: Can you make your enemy eat lead with the most simple of weapons?]
+gamemodedesc 7 [1Bot Team Deathmatch: Find the enemy team and destroy them!]
+gamemodedesc 8 [1Bot Deathmatch: It's every man and A.I for themselves! Dismantle those bots!  ]
+gamemodedesc 9 [1Last Swiss Standing: Knive and bomb the enemy!]
+gamemodedesc 10 [1One Shot, One Kill: You and your opponents start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
+gamemodedesc 11 [1Team One Shot, One Kill: Your team starts with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
+gamemodedesc 12 [1Bot One-Shot, One Kill: You and the bots start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
+gamemodedesc 13 [1Hunt the Flag: Find the enemy flag, frag the flag bearer and collect the flag to score. Protect your own team flag.]
+gamemodedesc 14 [1Team Keep the Flag: There is only one flag. Get the flag and keep it. You score one point every 15 seconds. If your teammate has the flag, protect him.]
+gamemodedesc 15 [1Keep the Flag: Get the flag and keep it. You score one point every 15 seconds. Everybody is will want to destroy you!]
 
-// create additional menus
+
+// Create additional menus...
 exec config/menus_bot.cfg
 exec config/menus_edit.cfg
 exec config/menus_settings.cfg
 exec config/menus_multiplayer.cfg
-
-// game mode descriptions
-gamemodedesc 5 [CTF: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
-gamemodedesc 13 [HTF: Find the enemy flag, frag the flag bearer and collect the flag to score. Protect your own team flag.]
-gamemodedesc 14 [TKTF: There is only one flag. Get the flag and keep it. You score one point every 15 seconds. If your teammate has the flag, protect him.]
-gamemodedesc 15 [KTF: Get the flag and keep it. You score one point every 15 seconds. You are alone. Everybody else will try to frag you.]
-
