--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,4 +1,4 @@
-// Decides wether to open the admin or normal in-game menu.
+// Decides whether to open the admin or normal in-game menu.
 alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-game ] ]
 
 // Normal in-game menu that opens when pressing escape and connected to a game.
@@ -15,8 +15,8 @@ menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Demos"			"showmenu demo"
 menuitem ""
-menuitem "Disconnect"			"disconnect"
-menuitem "2Go back to Main Menu"		"showmenu main"
+menuitem "3Disconnect"			"disconnect"
+menuitem "2Go back to Main Menu"	"showmenu main"
 
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
@@ -34,8 +34,8 @@ menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu demo"
 menuitem "" ""
-menuitem "Disconnect"			"disconnect"
-menuitem "2Go back to Main Menu"		"showmenu main"
+menuitem "3Disconnect"			"disconnect"
+menuitem "2Go back to Main Menu"	"showmenu main"
 
 
 // Multiplayer menu only opens through the main menu (when disconnected).
