--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -4,10 +4,10 @@ menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .p
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
-menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
-menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu mapmodel 75 12"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu mapmodel 75 12"
-menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu mapmodel 75 12"
+menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl Weapons weapons/assault/menu mapmodel 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl Weapons weapons/subgun/menu mapmodel 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl Weapons weapons/sniper/menu mapmodel 75 12"
+menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen" "chmenumdl Weapons weapons/shotgun/menu mapmodel 75 12"
 
 
 newmenu CLA
