fixed weapon bind
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3087 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -50,7 +50,7 @@ keymap 94 CARET ""
 keymap 95 UNDERSCORE ""
 keymap 96 BACKQUOTE "saycommand /"
 keymap 97 A "left"
-keymap 98 B "showmenu weapons"
+keymap 98 B "showmenu Weapons"
 keymap 99 C "copy"
 keymap 100 D "right"
 keymap 101 E "edittoggle"
