--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -53,7 +53,7 @@ bind CARET ""
 bind UNDERSCORE ""
 bind BACKQUOTE "saycommand /"
 bind A "left"
-bind B "showmenu weapons"
+bind B "showmenu Weapons"
 bind C "copy"
 bind D "right"
 bind E "edittoggle"
