--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -1,139 +1,142 @@
-// do not modify, use "bind" in autoexec.cfg instead
+// do not modify, use
 
-keymap -1 MOUSE1 "attack"
-keymap -3 MOUSE2 [ if $editing [ showmenu editing ] [ altaction ] ]
-keymap -2 MOUSE3 "weapon"
-keymap -4 MOUSE4 "universaldelta  1"
-keymap -5 MOUSE5 "universaldelta -1"
-keymap 8 BACKSPACE [ if $editing [ delent ] [ dropflag ] ]
-keymap 9 TAB "showscores"
-keymap 12 CLEAR ""
-keymap 13 RETURN ""
-keymap 19 PAUSE ""
-keymap 27 ESCAPE [ if $connected [ ingamemenu ] [ showmenu main ] ]
-keymap 32 SPACE "jump"
-keymap 33 EXCLAIM ""
-keymap 34 QUOTEDBL ""
-keymap 35 HASH ""
-keymap 36 DOLLAR ""
-keymap 38 AMPERSAND ""
-keymap 39 QUOTE ""
-keymap 40 LEFTPAREN ""
-keymap 41 RIGHTPAREN ""
-keymap 42 ASTERISK ""
-keymap 43 PLUS ""
-keymap 44 COMMA "equalize 0"
-keymap 45 MINUS ""
-keymap 46 PERIOD "equalize 2"
-keymap 47 SLASH "saycommand /"
-keymap 48 0 ""
-keymap 49 1 "primary"
-keymap 50 2 "secondary"
-keymap 51 3 "grenades"
-keymap 52 4 "melee"
-keymap 53 5 ""
-keymap 54 6 ""
-keymap 55 7 ""
-keymap 56 8 "vdelta -1"
-keymap 57 9 "vdelta 1"
-keymap 58 COLON ""
-keymap 59 SEMICOLON ""
-keymap 60 LESS ""
-keymap 61 EQUALS ""
-keymap 62 GREATER ""
-keymap 63 QUESTION ""
-keymap 64 AT ""
-keymap 91 LEFTBRACKET "editheight 0 -1"
-keymap 92 BACKSLASH ""
-keymap 93 RIGHTBRACKET "editheight 0 1"
-keymap 94 CARET ""
-keymap 95 UNDERSCORE ""
-keymap 96 BACKQUOTE "saycommand /"
-keymap 97 A "left"
-keymap 98 B "showmenu Weapons"
-keymap 99 C "copy"
-keymap 100 D "right"
-keymap 101 E "edittoggle"
-keymap 102 F "solid 1"
-keymap 103 G [ if $editing [ solid 0 ] [ quicknadethrow ] ]
-keymap 104 H "heightfield 0"
-keymap 105 I "heightfield 2"
-keymap 106 J ""
-keymap 107 K "corner"
-keymap 108 L [ if $editing [ showmenu Lighting ] ]
-keymap 109 M ""
-keymap 110 N ""
-keymap 111 O "editheight 2 -1"
-keymap 112 P "editheight 2 1"
-keymap 113 Q [ if $editing [ domodifier 1 ] ]
-keymap 114 R "reload"
-keymap 115 S "backward"
-keymap 116 T "saycommand"
-keymap 117 U "undo"
-keymap 118 V [ if $editing [ paste ] [ showmenu voicecom ] ]
-keymap 119 W "forward"
-keymap 120 X [ if $editing [ domodifier 3 ] ]
-keymap 121 Y "saycommand %"
-keymap 122 Z [ if $editing [ domodifier 2 ] ]
-keymap 127 DELETE "edittex 0 -1"
-keymap 256 KP0 "weapon 4 1"
-keymap 257 KP1 ""
-keymap 258 KP2 ""
-keymap 259 KP3 ""
-keymap 260 KP4 "edittex 3 -1"
-keymap 261 KP5 ""
-keymap 262 KP6 ""
-keymap 263 KP7 "edittex 3 1"
-keymap 264 KP8 ""
-keymap 265 KP9 ""
-keymap 266 KP_PERIOD ""
-keymap 267 KP_DIVIDE ""
-keymap 268 KP_MULTIPLY ""
-keymap 269 KP_MINUS "conskip 1"
-keymap 270 KP_PLUS "conskip -1000"
-keymap 271 KP_ENTER ""
-keymap 272 KP_EQUALS ""
-keymap 273 UP "forward"
-keymap 274 DOWN "backward"
-keymap 275 RIGHT "right"
-keymap 276 LEFT "left"
-keymap 277 INSERT "edittex 0 1"
-keymap 278 HOME "edittex 1 1"
-keymap 279 END "edittex 1 -1"
-keymap 280 PAGEUP "edittex 2 1"
-keymap 281 PAGEDOWN "edittex 2 -1"
-keymap 282 F1 "vote 1"
-keymap 283 F2 "vote 2"
-keymap 284 F3 ""
-keymap 285 F4 ""
-keymap 286 F5 "if $editing [ toggleocull ]"
-keymap 287 F6 "if $editing [ showmip ]"
-keymap 288 F7 ""
-keymap 289 F8 ""
-keymap 290 F9 ""
-keymap 291 F10 "getdemo"
-keymap 292 F11 "toggleconsole"  
-keymap 293 F12 [ screenshot; sleep 3 [ echo "Screenshot created." ] ]
-keymap 294 F13 ""
-keymap 295 F14 ""
-keymap 296 F15 ""
-keymap 300 NUMLOCK ""
-keymap 301 CAPSLOCK ""
-keymap 302 SCROLLOCK ""
-keymap 303 RSHIFT ""
-keymap 304 LSHIFT "crouch"
-keymap 305 RCTRL "jump"
-keymap 306 LCTRL "jump"
-keymap 307 RALT ""
-keymap 308 LALT "toggleshowmap"
-keymap 309 RMETA ""
-keymap 310 LMETA ""
-keymap 311 LSUPER ""
-keymap 312 RSUPER ""
-keymap 313 MODE ""
-keymap 314 COMPOSE ""
-keymap 315 HELP ""
-keymap 316 PRINT ""
-keymap 317 SYSREQ ""
-keymap 318 BREAK ""
-keymap 319 MENU ""
+keymap -1 MOUSE1
+keymap -3 MOUSE2
+keymap -2 MOUSE3
+keymap -4 MOUSE4
+keymap -5 MOUSE5
+keymap 8 BACKSPACE
+keymap 9 TAB
+keymap 12 CLEAR
+keymap 13 RETURN
+keymap 19 PAUSE
+keymap 27 ESCAPE
+keymap 32 SPACE
+keymap 33 EXCLAIM
+keymap 34 QUOTEDBL
+keymap 35 HASH
+keymap 36 DOLLAR
+keymap 38 AMPERSAND
+keymap 39 QUOTE
+keymap 40 LEFTPAREN
+keymap 41 RIGHTPAREN
+keymap 42 ASTERISK
+keymap 43 PLUS
+keymap 44 COMMA 
+keymap 45 MINUS
+keymap 46 PERIOD
+keymap 47 SLASH
+keymap 48 0
+keymap 49 1
+keymap 50 2
+keymap 51 3
+keymap 52 4
+keymap 53 5
+keymap 54 6
+keymap 55 7
+keymap 56 8
+keymap 57 9
+keymap 58 COLON
+keymap 59 SEMICOLON
+keymap 60 LESS
+keymap 61 EQUALS
+keymap 62 GREATER
+keymap 63 QUESTION
+keymap 64 AT
+keymap 91 LEFTBRACKET
+keymap 92 BACKSLASH
+keymap 93 RIGHTBRACKET
+keymap 94 CARET
+keymap 95 UNDERSCORE
+keymap 96 BACKQUOTE
+keymap 97 A
+keymap 98 B
+keymap 99 C
+keymap 100 D
+keymap 101 E
+keymap 102 F
+keymap 103 G
+keymap 104 H
+keymap 105 I
+keymap 106 J
+keymap 107 K
+keymap 108 L
+keymap 109 M
+keymap 110 N
+keymap 111 O
+keymap 112 P
+keymap 113 Q
+keymap 114 R
+keymap 115 S
+keymap 116 T
+keymap 117 U
+keymap 118 V
+keymap 119 W
+keymap 120 X
+keymap 121 Y
+keymap 122 Z
+keymap 127 DELETE
+keymap 256 KP0
+keymap 257 KP1
+keymap 258 KP2
+keymap 259 KP3
+keymap 260 KP4
+keymap 261 KP5
+keymap 262 KP6
+keymap 263 KP7
+keymap 264 KP8
+keymap 265 KP9
+keymap 266 KP_PERIOD
+keymap 267 KP_DIVIDE
+keymap 268 KP_MULTIPLY
+keymap 269 KP_MINUS
+keymap 270 KP_PLUS
+keymap 271 KP_ENTER
+keymap 272 KP_EQUALS
+keymap 273 UP
+keymap 274 DOWN
+keymap 275 RIGHT
+keymap 276 LEFT
+keymap 277 INSERT
+keymap 278 HOME
+keymap 279 END
+keymap 280 PAGEUP
+keymap 281 PAGEDOWN
+keymap 282 F1
+keymap 283 F2
+keymap 284 F3
+keymap 285 F4
+keymap 286 F5
+keymap 287 F6
+keymap 288 F7
+keymap 289 F8
+keymap 290 F9
+keymap 291 F10
+keymap 292 F11
+keymap 293 F12
+keymap 294 F13
+keymap 295 F14
+keymap 296 F15
+keymap 300 NUMLOCK
+keymap 301 CAPSLOCK
+keymap 302 SCROLLOCK
+keymap 303 RSHIFT
+keymap 304 LSHIFT
+keymap 305 RCTRL
+keymap 306 LCTRL
+keymap 307 RALT
+keymap 308 LALT
+keymap 309 RMETA
+keymap 310 LMETA
+keymap 311 LSUPER
+keymap 312 RSUPER
+keymap 313 MODE
+keymap 314 COMPOSE
+keymap 315 HELP
+keymap 316 PRINT
+keymap 317 SYSREQ
+keymap 318 BREAK
+keymap 319 MENU
+
+exec config/resetbinds.cfg
+
